# job-interview-terms

./: .gitignore  README.md  freq_words.csv  main.py  pyproject.toml  top_job_interview_words.json
files/: known_words.csv
job-terms-app/: README.md  package-lock.json  package.json
job-terms-app/src/: App.vue
job-terms-app/src/components/: FlashCard.vue  HelloWorld.vue
job_terms_backend/: pyproject.toml
job_terms_backend/job_terms_backend/: app.py  endpoints.py  models.py
job_terms_backend/tests/: test_job_terms_backend.py
job_terms_loader/: config.py  dictionaryapi.py  main.py  pyproject.toml  quzlet_format.py  transform_to_mongo.py
job_terms_loader/files/: freq_words.csv  job_interview_terms_dict.json  raw_text.pkl  sents.pkl  terms_mongo_dump.json
