[tool.poetry]
name = "job-interview-terms"
version = "0.1.0"
description = ""
authors = ["Dmitry Kolosov <52660454+pixl4tech@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.7"
pandas = "^1.4.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

