[tool.poetry]
name = "job_terms_backend"
version = "0.1.0"
description = ""
authors = ["Dmitry Kolosov <52660454+pixl4tech@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
appdirs = "^1.4.4"
black = "^22.3.0"
click = "^8.1.3"
dnspython = "^2.2.1"
email-validator = "^1.2.1"
flake8 = "^4.0.1"
h11 = "^0.13.0"
idna = "^3.3"
motor = "^3.0.0"
mypy-extensions = "^0.4.3"
pathspec = "^0.9.0"
pycodestyle = "^2.8.0"
pydantic = "^1.9.0"
pyflakes = "^2.4.0"
pymongo = "^4.1.1"
regex = "^2022.4.24"
toml = "^0.10.2"
typed-ast = "^1.5.3"
typing-extensions = "^4.2.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
